Grid gap fix

--- a/src/styles/components/_buttons-grid.scss
+++ b/src/styles/components/_buttons-grid.scss
@@ -1,7 +1,7 @@
 .calculator__buttonContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    gap: 20px;
     padding:10px;
 }
 
