--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
 .calculator__buttonContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 20px;
   padding: 10px;
 }
 
